[package]
name = "tub"
version = "0.3.5"
description = "Async Pool"
authors = ["Will Cygan <wcygan.io@gmail.com>"]
categories = ["asynchronous", "concurrency", "data-structures"]
keywords = ["asynchronous", "pool", "object-pool", "resource-pool", "async"]
repository = "https://github.com/wcygan/tub"
homepage = "https://github.com/wcygan/tub"
exclude = ["/.github", "/benches", "/resources"]
edition = "2021"
license = "MIT"

[[bench]]
name = "tub-bench"
path = "benches/lib.rs"
harness = false

[[test]]
name = "test"
path = "test/test.rs"

[dependencies]
crossbeam-queue = "0.3.8"
tokio = { version = "1.26.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }
proptest = "1.1.0"
futures = "0.3.27"
criterion = { version = "0.4.0", features = ["async_tokio"] }
async-object-pool = "0.1.4"
simple-pool = "0.0.11"
async-resource = "0.1.0"

# These versions are pinned to fix `cargo +nightly update -Zminimal-versions && cargo test --locked --all-features`
# Which breaks because of transitive dependencies on regex & serde from Criterion
regex = "1.7.1"
serde = "1.0.156"